[package]
name = "gkd"
version = "0.1.0"
authors = ["importcjj <importcjj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version="1.1.0", features=["unstable", "attributes"] }
log = "0.4"
byteorder = "1.3.2"
futures = "0.3.1"
env_logger = "0.7.1"
bytes = "0.5.0"